# TMS570LS0714-freertos-cmake

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  adc.h  can.h  eqep.h  het.h  i2c.h  lin.h  mibspi.h  pinmux.h  reg_adc.h  reg_eqep.h  reg_mibspi.h  spi.h  system.h
source/: adc.c  can.c  ecap.c  eqep.c  etpwm.c  het.c  i2c.c  lin.c  mibspi.c  pinmux.c  spi.c  sys_link.cmd  sys_selftest.c  sys_startup.c  system.c
targetConfigs/: TMS570LS0714.ccxml
